--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title></title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="output">0</div>
+      <div class="interaction-container">
+        <div class="btn increase">+</div>
+        <div class="btn decrease">-</div>
+        <input type="text" value="1" class="inpt">
+      </div>
+    </div>
   </body>
 </html>
